--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 	path = submodules/TIMER
 	url = git@github.com:IObundle/iob-timer.git
 
+[submodule "submodules/KNN"]
+	path = submodules/KNN
+	url = git@github.com:laisa0420/iob-knn.git
